cluster-manifest/res/argocd.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-ingress
  namespace: argocd
  annotations:
    haproxy.org/server-ssl: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  rules:
  - host: argocd.example.com
    http:
      paths:
      - backend:
          service:
            name: argocd-server
            port:
              name: https
        pathType: Prefix
        path: /
  tls:
  - hosts:
    - '*.example.com'
    secretName: 'example-com-cert'
