cluster-manifest/res/kube.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kube-ingress
  namespace: default
  annotations:
    # haproxy
    ingress.kubernetes.io/ssl-passthrough: "true"
    # nginx
    kubernetes.io/ingress.allow-http: "false"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/secure-backends: "true"
spec:
  rules:
  - host: kube.example.com
    http:
      paths:
      - backend:
          service:
            name: kubernetes
            port:
              name: https
        pathType: ImplementationSpecific
